# MoSEF-Applied-ML

./: Analyse exploratoire de donnВes (EDA).ipynb  README.md  main.py  pyproject.toml
data/: data.csv
notebook/: Analyse exploratoire de donnВes (EDA).ipynb  test_analyse_exploratoire.ipynb  trying_functions.ipynb
src/: analyse_exploratoire.py
src/__pycache__/: analyse_exploratoire.py
